--- a/restaurantes/pgmolde5.html
+++ b/restaurantes/pgmolde5.html
@@ -1,24 +1,27 @@
-<!DOCTYPE html>
+
+    <!DOCTYPE html>
     <html lang="pt-BR">
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>germanos restaurante</title>
+      <title>Deusa Gourmet</title>
       <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="./molderest-style.css">
+      <link rel="stylesheet" href="molderest-style.css">
     </head>
     <body>
       <div class="container">
-        <h2 class="titulo">Germanos</h2>
-        <img src="./germanos.png" alt="Deusa Gourmet" class="imagem-local">
+        <h2 class="titulo">Tchê Gourmet</h2>
+        <img src="./tchegourmet.jpg" alt="Deusa Gourmet" class="imagem-local">
         
         <div class="tags">
           <span class="tag">Rampas de Acesso</span>
           <span class="tag">Banheiro Adaptado</span>
+          <span class="tag">Estacionamento Acessível</span>
         </div>
     
         <p class="descricao">
-            O Gemano's Restaurante tem como carro chefe a CARNE DE SOL no entanto tem inúmeros pratos da cozinha Nordestina como cordeiro galinha caipira e a tradicional carne de sol com queijo coalho na brasa, peixes,frutos do mar e carnes Premium . AMBIENTE 100% CLIMATIZADO.
+          O Restaurante Tchê Gourmet oferece pratos típicos da culinária de Mossoró, Rio Grande do Norte.
+        </p>
       </div>
     </body>
     </html>
