praça da convivência

--- a/pracas/praca6.html
+++ b/pracas/praca6.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Mossoro Acessivel - Memorial da Resistência</title>
       <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="../pracas/moldepracas-style.css">
+      <link rel="stylesheet" href="./moldepracas-style.css">
     </head>
     <body>
       <div class="container">
