--- a/pracas.html
+++ b/pracas.html
@@ -174,11 +174,11 @@
                       </div>
                     </div>
                   
-                    <!-- Restaurante 6 -->
+                    <!-- Praça 6 -->
                     <div class="restaurante">
-                      <img src="assets/restaurante.png" class="img-locais-detalhes">
-                      <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                      <a href="pgmolde6.html" class="botao-detalhes">Detalhes</a>
+                      <img src="./pracas/convivencia.jpg" class="img-locais-detalhes">
+                      <h4 class="titulo-detalhes-local">Praça da Convivência</h4>
+                      <a href="./pracas/praca6.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
                         <input type="radio" id="rating6-5" name="rating6" hidden>
