--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <menu>
                 <a href="index.html">Home</a>
                 <a href="locais.html">Locais</a>
-                <a href="mapa_interativo.html">Mapa Interativo</a>
+                <a href="./mapainterativo/mapa_interativo.html">Mapa Interativo</a>
                 <a href="leis.html">Leis de Acessibilidade</a>
                 <a href="./sobrenos/sobre_nos.html">Sobre Nós</a>
                 <a href="para_voce.html">Para Você</a>
