--- a/pracas/praca3.html
+++ b/pracas/praca3.html
@@ -3,23 +3,26 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Mossoro Acessivel - Memorial da Resistência</title>
+      <title>Mossoro Acessivel - Praça do Aeroporto</title>
       <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="../pracas/moldepracas-style.css">
+      <link rel="stylesheet" href="./moldepracas-style.css">
     </head>
     <body>
       <div class="container">
-        <h2 class="titulo"> Praça da Convivência </h2>
-        <img src="./convivencia.jpg" alt="fachada da Praça da Convivência" class="imagem-local">
+        <h2 class="titulo"> Praça do Aeroport </h2>
+        <img src="./aeroporto.png" alt="fachada da Praça do Aeroporto" class="imagem-local">
         
         <div class="tags">
           <span class="tag">Rampas de Acesso</span>
-          <span class="tag">Banheiro Adaptado</span>
+          <span class="tag">Piso Tátil</span>
           <span class="tag">Estacionamento Acessível</span>
         </div>
     
         <p class="descricao">
-            A praça da convivência é um espaço público projetado para promover a interação social e o bem-estar da comunidade. Esses espaços são acolhedores e acessíveis para pessoas de todas as idades, oferecendo atividades recreativas, culturais e recreativas. 
+            A praça do Aeroporto é um espaço público projetado para promover a interação social e o bem-estar da comunidade. 
+            Esses espaços são acolhedores e acessíveis para pessoas de todas as idades, oferecendo atividades recreativas, 
+            culturais e recreativas. Na Praça do Aeroporto está disponível uma academia pública, quadras de esportes, e diversos
+            vendedores com comidas diversas.
         </p>
       </div>
     </body>
