update praça e loja

--- a/lojas/loja2.html
+++ b/lojas/loja2.html
@@ -10,18 +10,16 @@
 </head>
 <body>
   <div class="container">
-    <h2 class="titulo">Riachuelo</h2>
-    <img src="./riachuelo.jpg" alt="Fachada da loja Riachuelo R. Cel. Gurgel, 220 - Centro, Mossoró - RN" class="imagem-local">
+    <h2 class="titulo">Iara Variedades</h2>
+    <img src="../assets/laravariedade.png" alt="Fachada da loja Riachuelo R. Cel. Gurgel, 220 - Centro, Mossoró - RN" class="imagem-local">
     
     <div class="tags">
       <span class="tag">Rampas de Acesso</span>
-      <span class="tag">Banheiro Adaptado</span>
       <span class="tag">Estacionamento Acessível</span>
     </div>
 
     <p class="descricao">
-    A Riachuelo se propõe a facilitar o acesso à moda, levando-a ao consumidor com agilidade e qualidade, por um valor justo. Para tanto, pesquisa, desenvolve e distribui as novidades das passarelas e das ruas na velocidade que o mundo pede e que os clientes merecem. Além disso, busca trazer produtos de qualidade e com personalidade, para ser referência no varejo de moda feminina, masculina e infantil.
-    </p>
+      A loja Lara Variedades lhe proporciona artigos para presente, xerox, roupas infantis, Biquínis, Perfumaria, acessórios, e muitos outros, passe lá e confira    </p>
   </div>
 </body>
 </html>
