--- a/locais.html
+++ b/locais.html
@@ -68,7 +68,7 @@
                   
                       <!-- Restaurante 2 -->
                       <div class="restaurante">
-                        <img src="assets/images.png" class="img-locais-detalhes">
+                        <img src="assets/germanos.png" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local">Praça da matriz</h4>
                         <a href="pgmolde2.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
