--- a/pracas/praca5.html
+++ b/pracas/praca5.html
@@ -9,8 +9,8 @@
     </head>
     <body>
       <div class="container">
-        <h2 class="titulo"> Praça da Convivência </h2>
-        <img src="./convivencia.jpg" alt="fachada da Praça da Convivência" class="imagem-local">
+        <h2 class="titulo"> Praça Rodolfo Fernandes </h2>
+        <img src="../assets/Praça-Rodolfo-Fernandes-Mossoró.png" alt="fachada da Praça da Convivência" class="imagem-local">
         
         <div class="tags">
           <span class="tag">Rampas de Acesso</span>
@@ -19,8 +19,7 @@
         </div>
     
         <p class="descricao">
-            A praça da convivência é um espaço público projetado para promover a interação social e o bem-estar da comunidade. Esses espaços são acolhedores e acessíveis para pessoas de todas as idades, oferecendo atividades recreativas, culturais e recreativas. 
-        </p>
+          praça histórica localizada no centro da cidade, cercada por estabelecimentos comerciais e prédios antigos        </p>
       </div>
     </body>
     </html>
