Praça do Aeroporto adicionada

--- a/pracas/praca3.html
+++ b/pracas/praca3.html
@@ -9,7 +9,7 @@
     </head>
     <body>
       <div class="container">
-        <h2 class="titulo"> Praça do Aeroport </h2>
+        <h2 class="titulo"> Praça do Aeroporto </h2>
         <img src="./aeroporto.png" alt="fachada da Praça do Aeroporto" class="imagem-local">
         
         <div class="tags">
