queiroz atacadão e rebouças

--- a/supermercados.html
+++ b/supermercados.html
@@ -44,9 +44,9 @@
 
                       <!-- Supermercados 1 -->
                       <div class="restaurante">
-                        <img src="./supermercados/queirozatacadao.webp" class="img-locais-detalhes">
+                        <img src="./supermercados/queiroz-atacadao-01.jpg" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local"> Queiroz Atacadão</h4>
-                        <a href="supermercados/super5.html" class="botao-detalhes">Detalhes</a>
+                        <a href="./supermercados/super1.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating1-5" name="rating1" hidden>
                           <label for="rating1-5" class="fa-solid fa-star"></label>
@@ -155,7 +155,7 @@
                     <div class="restaurante">
                       <img src="./supermercados/rebouças.jpg" class="img-locais-detalhes">
                       <h4 class="titulo-detalhes-local">Rebouças</h4>
-                      <a href="supermercados/super1.html" class="botao-detalhes">Detalhes</a>
+                      <a href="supermercados/super5.html" class="botao-detalhes">Detalhes</a>
 
                   
                       <div class="rating-box">
