--- a/supermercados/super1.html
+++ b/supermercados/super1.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buscape Budd</title>
+  <title>Queiroz Atacadão</title>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="moldesuper-style.css">
 </head>
 <body>
   <div class="container">
-    <h2 class="titulo">Rebouças</h2>
-    <img src="./rebouças.jpg" alt="Fachada do supermercado Rebouças na Av. Alberto Maranhão" class="imagem-local">
+    <h2 class="titulo"> Queiroz Atacadão</h2>
+    <img src="./queiroz-atacadao-01.jpg" alt="Fachada do supermercado Queiroz Atacadão" class="imagem-local">
     
     <div class="tags">
       <span class="tag">Rampas de Acesso</span>
@@ -20,7 +20,7 @@
     </div>
 
     <p class="descricao">
-      O Rebouças Supermercados é uma empresa genuinamente potiguar de grande potencial no mercado Norte Rio Grandense. Objetivando promover sempre o melhor, o Rebouças Supermercados, estabelece constantes parcerias para propiciar excelentes condições de compra e um menor preço aos seus consumidores.
+      Grupo Queiroz com as renomadas bandeiras Hiper Queiroz e Queiroz Atacadão, contando com 21 lojas estrategicamente posicionadas nos estados do Rio Grande do Norte e Paraíba. Além disso, temos uma sólida infraestrutura composta por 3 centros de distribuição, uma transportadora e um Centro Administrativo de excelência.
     </p>
   </div>
 </body>
