--- a/supermercados/super5.html
+++ b/supermercados/super5.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buscape Budd</title>
+  <title>Rebouças</title>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="moldesuper-style.css">
 </head>
 <body>
   <div class="container">
-    <h2 class="titulo">Queiroz Atacadão</h2>
-    <img src="./queirozatacadao.webp" alt="Fachada do supermercado Rebouças na Av. Alberto Maranhão" class="imagem-local">
+    <h2 class="titulo"> Rebouças</h2>
+    <img src="./rebouças.jpg" alt="Fachada do supermercado Rebouças na Av. Alberto Maranhão" class="imagem-local">
     
     <div class="tags">
       <span class="tag">Rampas de Acesso</span>
