--- a/pracas.html
+++ b/pracas.html
@@ -68,9 +68,9 @@
                   
                       <!-- Restaurante 2 -->
                       <div class="restaurante">
-                        <img src="assets/restaurante.png" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                        <a href="pgmolde.html" class="botao-detalhes">Detalhes</a>
+                        <img src="assets/Praça-Rodolfo-Fernandes-Mossoró.png" class="img-locais-detalhes">
+                        <h4 class="titulo-detalhes-local">Praça Rodolfo Fernandes</h4>
+                        <a href="pracas/pracas2.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating2-5" name="rating2" hidden>
                           <label for="rating2-5" class="fa-solid fa-star"></label>
