--- a/pracas/pracas2.html
+++ b/pracas/pracas2.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Mossoro Acessivel - Memorial da Resistência</title>
+      <title>Praça Rodolfo Fernandes</title>
       <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="../pracas/moldepracas-style.css">
     </head>
