--- a/pracas/praca5.html
+++ b/pracas/praca5.html
@@ -10,10 +10,10 @@
     <body>
       <div class="container">
         <h2 class="titulo"> Praça dos Esportes </h2>
-        
+
         <img src="praçasdosesportes.webp" alt="Praça dos Esportes" class="imagem-local">
 
-        <img src="" alt="fachada da Praça da Convivência" class="imagem-local">
+        <img src="" alt=" Praça dos Esportes" class="imagem-local">
 
         
         <div class="tags">
