--- a/supermercados/super3.html
+++ b/supermercados/super3.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buscape Budd</title>
+  <title>Dia a Dia</title>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="moldesuper-style.css">
 </head>
 <body>
   <div class="container">
-    <h2 class="titulo">Rebouças</h2>
-    <img src="./rebouças.jpg" alt="Fachada do supermercado Rebouças na Av. Alberto Maranhão" class="imagem-local">
+    <h2 class="titulo">Dia a Dia Super-Atacarejo</h2>
+    <img src="Dia a dia Super Atacarejo.jpg" alt="Fachada do supermercado Rebouças na Av. Alberto Maranhão" class="imagem-local">
     
     <div class="tags">
       <span class="tag">Rampas de Acesso</span>
@@ -20,7 +20,11 @@
     </div>
 
     <p class="descricao">
-      O Rebouças Supermercados é uma empresa genuinamente potiguar de grande potencial no mercado Norte Rio Grandense. Objetivando promover sempre o melhor, o Rebouças Supermercados, estabelece constantes parcerias para propiciar excelentes condições de compra e um menor preço aos seus consumidores.
+      Av. Rio Branco, 5610, Santo Antônio, Mossoró - RN. A loja possui um bom estacionamento, com fácil acesso para pessoas com deficiência.
+      Dispõe de lanchonete interna com opções de lanches e salgados.
+      Conta com uma seção de padaria. preços competitivos em comparação com outros supermercados da cidade, variedade de produtos e organização da loja.
+
+      
     </p>
   </div>
 </body>
