update loja e super

--- a/lojas.html
+++ b/lojas.html
@@ -68,7 +68,7 @@
                   
                       <!-- Restaurante 2 -->
                       <div class="restaurante">
-                        <img src="assets/restaurante.png" class="img-locais-detalhes">
+                        <img src="assets/laravariedade.png" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local">Praça da matriz</h4>
                         <a href="lojas/loja2.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
