--- a/supermercados.html
+++ b/supermercados.html
@@ -180,7 +180,7 @@
                   
                     <!-- Supermercado 6 -->
                     <div class="restaurante">
-                      <img src="assets/restaurante.png" class="img-locais-detalhes">
+                      <img src="assets/assai.png" class="img-locais-detalhes">
                       <h4 class="titulo-detalhes-local">Supermercado 6</h4>
                       <a href="supermercados/super6.html" class="botao-detalhes">Detalhes</a>
                   
