--- a/lojas.html
+++ b/lojas.html
@@ -69,7 +69,7 @@
                       <!-- Restaurante 2 -->
                       <div class="restaurante">
                         <img src="assets/laravariedade.png" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                        <h4 class="titulo-detalhes-local">lara variedade</h4>
                         <a href="lojas/loja2.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating2-5" name="rating2" hidden>
