--- a/museus/museu5.html
+++ b/museus/museu5.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Mossoro Acessivel - Estação das Artes Elizeu Ventania</title>
       <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="../museus/moldemuseu-style.css">
+      <link rel="stylesheet" href="./moldemuseu-style.css">
     </head>
     <body>
       <div class="container">
