--- a/supermercados.html
+++ b/supermercados.html
@@ -96,8 +96,8 @@
 
                       <!-- Supermercado 3 -->
                       <div class="restaurante">
-                        <img src="supermercados/Dia a dia Atacarejo.jpg" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Dia a Dia Super-Atacarejo</h4>
+                        <img src="assets/restaurante.png" class="img-locais-detalhes">
+                        <h4 class="titulo-detalhes-local">Supermercado 3</h4>
                         <a href="supermercados/super3.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating3-5" name="rating3" hidden>
@@ -127,8 +127,8 @@
 
                     <!-- Supermercado 4 -->
                     <div class="restaurante">
-                      <img src="supermercados/Super-Facil-Atacado.webp" class="img-locais-detalhes">
-                      <h4 class="titulo-detalhes-local"> SuperFacil-Atacado</h4>
+                      <img src="assets/restaurante.png" class="img-locais-detalhes">
+                      <h4 class="titulo-detalhes-local"> Supermercado 4</h4>
                       <a href="supermercados/super4.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
@@ -181,7 +181,7 @@
                     <!-- Supermercado 6 -->
                     <div class="restaurante">
                       <img src="assets/assai.png" class="img-locais-detalhes">
-                      <h4 class="titulo-detalhes-local">Supermercado 6</h4>
+                      <h4 class="titulo-detalhes-local">Assai</h4>
                       <a href="supermercados/super6.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
