--- a/pracas.html
+++ b/pracas.html
@@ -124,9 +124,9 @@
 
                     <!-- Restaurante 4 -->
                     <div class="restaurante">
-                      <img src="assets/restaurante.png" class="img-locais-detalhes">
-                      <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                      <a href="pgmolde4.html" class="botao-detalhes">Detalhes</a>
+                      <img src="pracas/DAMIÃO.jpg" class="img-locais-detalhes">
+                      <h4 class="titulo-detalhes-local">Praça Damião</h4>
+                      <a href="pracas/praca4.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
                         <input type="radio" id="rating4-5" name="rating4" hidden>
