--- a/pracas/praca4.html
+++ b/pracas/praca4.html
@@ -9,8 +9,8 @@
     </head>
     <body>
       <div class="container">
-        <h2 class="titulo"> Praça da Convivência </h2>
-        <img src="./convivencia.jpg" alt="fachada da Praça da Convivência" class="imagem-local">
+        <h2 class="titulo"> Praça Damião </h2>
+        <img src="DAMIÃO.jpg" alt="fachada da Praça da Convivência" class="imagem-local">
         
         <div class="tags">
           <span class="tag">Rampas de Acesso</span>
@@ -19,7 +19,7 @@
         </div>
     
         <p class="descricao">
-            A praça da convivência é um espaço público projetado para promover a interação social e o bem-estar da comunidade. Esses espaços são acolhedores e acessíveis para pessoas de todas as idades, oferecendo atividades recreativas, culturais e recreativas. 
+          A Praça Damião Germano, em Nova Betânia (Mossoró-RN), é um local arborizado e tranquilo, usado para lazer e encontros da comunidade. Mesmo simples, é um ponto importante de convivência do bairro.
         </p>
       </div>
     </body>
