--- a/museus.html
+++ b/museus.html
@@ -122,11 +122,11 @@
 
                   <div class="restaurantes-linha">
 
-                    <!-- Restaurante 4 -->
+                    <!-- Museu 4 -->
                     <div class="restaurante">
-                      <img src="assets/restaurante.png" class="img-locais-detalhes">
-                      <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                      <a href="pgmolde4.html" class="botao-detalhes">Detalhes</a>
+                      <img src="./museus/diocese-memórias.jpg" class="img-locais-detalhes">
+                      <h4 class="titulo-detalhes-local">Diocesano de Memórias</h4>
+                      <a href="museus/museu4.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
                         <input type="radio" id="rating4-5" name="rating4" hidden>
@@ -147,6 +147,8 @@
                         <div class="emojis"></div>
                       </div>
                     </div>
+
+
                   
                     <!-- Museu 5 -->
                     <div class="restaurante">
