--- a/supermercados.html
+++ b/supermercados.html
@@ -127,8 +127,8 @@
 
                     <!-- Supermercado 4 -->
                     <div class="restaurante">
-                      <img src="assets/restaurante.png" class="img-locais-detalhes">
-                      <h4 class="titulo-detalhes-local"> Supermercado 4</h4>
+                      <img src="./supermercados/Super-Facil-Atacado.webp" class="img-locais-detalhes">
+                      <h4 class="titulo-detalhes-local">Super-Facil</h4>
                       <a href="supermercados/super4.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
