--- a/supermercados.html
+++ b/supermercados.html
@@ -96,8 +96,8 @@
 
                       <!-- Supermercado 3 -->
                       <div class="restaurante">
-                        <img src="assets/restaurante.png" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Supermercado 3</h4>
+                        <img src="./supermercados/Dia a dia Atacarejo.jpg" class="img-locais-detalhes">
+                        <h4 class="titulo-detalhes-local"> Dia a dia super-Atacarejo</h4>
                         <a href="supermercados/super3.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating3-5" name="rating3" hidden>
