Update de Museus

--- a/museus.html
+++ b/museus.html
@@ -44,7 +44,7 @@
                       <!-- Museu 1 -->
                       <div class="restaurante">
                         <img src="../MossoroAcessivel/museus/memorial-da-resistencia.png" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Memorial da Resist.</h4>
+                        <h4 class="titulo-detalhes-local">Memorial da Resistência</h4>
                         <a href="../MossoroAcessivel/museus/museu1.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating1-5" name="rating1" hidden>
@@ -66,7 +66,7 @@
                         </div>
                       </div>
                   
-                      <!-- Restaurante 2 -->
+                      <!-- Museu 2 -->
                       <div class="restaurante">
                         <img src="assets/restaurante.png" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local">Praça da matriz</h4>
@@ -91,7 +91,7 @@
                         </div>
                       </div>
                   
-                      <!-- Restaurante 3 -->
+                      <!-- Museu 3 -->
                       <div class="restaurante">
                         <img src="./museus/sertao.webp" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local">Museu do Sertão</h4>
