--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -17,6 +17,9 @@
     <p> Alam vinicius </p>
     <p> Victor Manoel </p>
     <p> RIan Lima dos Santos</p>
-    <p> Instrutores: Maria Paula e Keginaldo </p>
+    <p> Gustavo Douglas</p>
+    <p> Deivid Lucélio</p>
+    <p> Instrutores: Maria Paula e Kegionaldo </p>
+    
 </body>
 </html>
