--- a/sobrenos/sobre_nos.html
+++ b/sobrenos/sobre_nos.html
@@ -18,6 +18,8 @@
   <a href="https://github.com/alamvinicius" target="_blank" class="membro">Rian Lima dos Santos</a>
   <a href="https://github.com/syangaires1" target="_blank" class="membro">Syang Aires</a>
   <a href="https://github.com/rianlimadossantos" target="_blank" class="membro">Victor Manoel</a>
+  <a href="https://github.com/gustavodouglas1111-stack" target="_blank" class="membro">Gustavo Douglas</a>
+  <a href="" target="_blank" class="membro">Deivid Lucelio</a>
 </section>
 <section class="Instrutores">
     <h3> Instrutores</h3>
