--- a/museus.html
+++ b/museus.html
@@ -68,9 +68,9 @@
                   
                       <!-- Museu 2 -->
                       <div class="restaurante">
-                        <img src="assets/restaurante.png" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                        <a href="pgmolde.html" class="botao-detalhes">Detalhes</a>
+                        <img src="../MossoroAcessivel/museus/LaurodaEscóssia.png" class="img-locais-detalhes">
+                        <h4 class="titulo-detalhes-local">Museu Histórico Lauro da Escóssia</h4>
+                        <a href="../MossoroAcessivel/museus/museu2.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating2-5" name="rating2" hidden>
                           <label for="rating2-5" class="fa-solid fa-star"></label>
