--- a/locaisteste.html
+++ b/locaisteste.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" href="slideshow-style.css">
     </head>
 
     <body>
@@ -7,23 +8,23 @@
         <div class="slide">
 
             <div class="local">
-                <img src="restaurantes/tchegourmet.jpg" alt="local 1">
+                <img src="restaurantes/tchegourmet.jpg" class="img-local" alt="local 1">
             </div>
 
             <div class="local">
-                <img src="lojas/adidas.png" alt="local 2">
+                <img src="lojas/adidas.png" class="img-local" alt="local 2">
             </div>
 
             <div class="local">
-                <img src="supermercados/hiper-queiroz-nova-betania.png" alt="local 3">
+                <img src="supermercados/hiper-queiroz-nova-betania.png" class="img-local" alt="local 3">
             </div>
 
             <div class="local">
-                <img src="museus/estacaomossoro.webp" alt="local 4">
+                <img src="museus/estacaomossoro.webp" class="img-local" alt="local 4">
             </div>
 
             <div class="local">
-                <img src="pracas/convivencia.jpg" alt="local 5">
+                <img src="pracas/convivencia.jpg" class="img-local" alt="local 5">
             </div>
 
         </div>
