--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             
         </div>
         <div class="colunasites">
-            <a href="https://www.portalacesse.com.br/"> Portal Classe </a>
+            <a href="https://www.portalacesse.com.br/"> Portal Acesse</a>
         </div>
     </div>
 </body>
