update locaisteste e script

--- a/locaisteste.html
+++ b/locaisteste.html
@@ -5,30 +5,41 @@
     </head>
 
     <body>
-
         
         <div class="slide">
 
             <div class="local">
                 <img src="restaurantes/tchegourmet.jpg" class="img-local" alt="local 1">
+                <a href="./restaurantes/pgmolde5.html" class="botao-detalhes">Detalhes</a>
             </div>
-
             <div class="local">
                 <img src="lojas/adidas.png" class="img-local" alt="local 2">
+                <a href="../MossoroAcessivel/lojas/loja1.html" class="botao-detalhes">Detalhes</a>
             </div>
 
             <div class="local">
                 <img src="supermercados/hiper-queiroz-nova-betania.png" class="img-local" alt="local 3">
+                <a href="supermercados/super2.html" class="botao-detalhes">Detalhes</a>
             </div>
 
             <div class="local">
                 <img src="museus/estacaomossoro.webp" class="img-local" alt="local 4">
+                <a href="../MossoroAcessivel/museus/museu5.html" class="botao-detalhes">Detalhes</a>
             </div>
 
             <div class="local">
                 <img src="pracas/convivencia.jpg" class="img-local" alt="local 5">
+                <a href="./pracas/praca6.html" class="botao-detalhes">Detalhes</a>
             </div>
 
+        </div>
+        
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
         </div>
 
         <script src="testescript.js"></script>
