Script do Locais funcionando

--- a/locaisteste.html
+++ b/locaisteste.html
@@ -10,26 +10,26 @@
 
             <div class="local">
                 <img src="restaurantes/tchegourmet.jpg" class="img-local" alt="local 1">
-                <a href="./restaurantes/pgmolde5.html" class="botao-detalhes">Detalhes</a>
+                <a href="./restaurantes/pgmolde5.html" class="botao-detalhes">Tchê Gourmet</a>
             </div>
             <div class="local">
                 <img src="lojas/adidas.png" class="img-local" alt="local 2">
-                <a href="../MossoroAcessivel/lojas/loja1.html" class="botao-detalhes">Detalhes</a>
+                <a href="../MossoroAcessivel/lojas/loja1.html" class="botao-detalhes">Adidas</a>
             </div>
 
             <div class="local">
                 <img src="supermercados/hiper-queiroz-nova-betania.png" class="img-local" alt="local 3">
-                <a href="supermercados/super2.html" class="botao-detalhes">Detalhes</a>
+                <a href="supermercados/super2.html" class="botao-detalhes">Hiper Queiroz - Nova Betânia</a>
             </div>
 
             <div class="local">
                 <img src="museus/estacaomossoro.webp" class="img-local" alt="local 4">
-                <a href="../MossoroAcessivel/museus/museu5.html" class="botao-detalhes">Detalhes</a>
+                <a href="../MossoroAcessivel/museus/museu5.html" class="botao-detalhes">Museu da Estação das Artes Elizeu Ventania</a>
             </div>
 
             <div class="local">
                 <img src="pracas/convivencia.jpg" class="img-local" alt="local 5">
-                <a href="./pracas/praca6.html" class="botao-detalhes">Detalhes</a>
+                <a href="./pracas/praca6.html" class="botao-detalhes">Praça da Convivência</a>
             </div>
 
         </div>
