commit de deivid

--- a/lojas/loja2.html
+++ b/lojas/loja2.html
@@ -10,6 +10,12 @@
 </head>
 <body>
   <div class="container">
+
+    <div class="botao-detalhes">
+       
+        <a href="..\lojas.html" class="botao-voltar">voltar</a>
+      </div>
+
     <h2 class="titulo">Iara Variedades</h2>
     <img src="../assets/laravariedade.png" alt="Fachada da loja Riachuelo R. Cel. Gurgel, 220 - Centro, Mossoró - RN" class="imagem-local">
     
