--- a/lojas/loja4.html
+++ b/lojas/loja4.html
@@ -10,6 +10,13 @@
 </head>
 <body>
   <div class="container">
+
+
+    
+    <div class="botao-detalhes">
+       
+        <a href="..\lojas.html" class="botao-voltar">voltar</a>
+      </div>
     <h2 class="titulo">Magazine Luiza</h2>
     <img src="../assets/magazine-luiza.jpg" alt="Fachada da Magazine Luiza Av. João da Escóssia,1515- Partage Shopping Mossoró">
     <div class="tags">
