--- a/museus/museu1.html
+++ b/museus/museu1.html
@@ -9,6 +9,12 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\museus.html" class="botao-voltar">voltar</a>
+      </div>
+
         <h2 class="titulo">Memorial da Resistência</h2>
         <img src="memorial-da-resistencia.png" alt="fachada do Memorial da Resistência" class="imagem-local">
         
