--- a/museus/museu2.html
+++ b/museus/museu2.html
@@ -9,6 +9,11 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\museus.html" class="botao-voltar">voltar</a>
+      </div>
         <h2 class="titulo">Museu Histórico Lauro da Escóssia</h2>
         <img src="LaurodaEscóssia.png" alt="fachada do museu" class="imagem-local">
         
