--- a/museus/museu4.html
+++ b/museus/museu4.html
@@ -9,6 +9,11 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\museus.html" class="botao-voltar">voltar</a>
+      </div>
         <h2 class="titulo">Diocesano de Memórias</h2>
         <img src="./diocese-memórias.jpg" alt="Centro Diocesano de Memórias" class="imagem-local">
         
