--- a/museus/museu6.html
+++ b/museus/museu6.html
@@ -9,6 +9,11 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\museus.html" class="botao-voltar">voltar</a>
+      </div>
         <h2 class="titulo">Pim Pinacoteca e Memorial</h2>
         <img src="pim2.jpg" alt="Fachada Pim Pinacoteca e Memorial Esam/Ufersa" class="imagem-local">
         
