--- a/pracas/pracas2.html
+++ b/pracas/pracas2.html
@@ -9,6 +9,12 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\pracas.html" class="botao-voltar">voltar</a>
+      </div>
+
         <h2 class="titulo"> Praça Rodolfo Fernandes </h2>
         <img src="../assets/Praça-Rodolfo-Fernandes-Mossoró.png" alt="fachada da Praça da Convivência" class="imagem-local">
         
