--- a/supermercados/super3.html
+++ b/supermercados/super3.html
@@ -10,6 +10,12 @@
 </head>
 <body>
   <div class="container">
+
+    <div class="botao-detalhes">
+       
+        <a href="..\supermercados.html" class="botao-voltar">voltar</a>
+      </div>
+
     <h2 class="titulo">Dia a Dia Super-Atacarejo</h2>
     <img src="Dia a dia Super Atacarejo.jpg" alt="Fachada do supermercado Rebouças na Av. Alberto Maranhão" class="imagem-local">
     
