--- a/supermercados/super4.html
+++ b/supermercados/super4.html
@@ -10,6 +10,12 @@
 </head>
 <body>
   <div class="container">
+
+   <div class="botao-detalhes">
+       
+        <a href="..\supermercados.html" class="botao-voltar">voltar</a>
+      </div>
+
     <h2 class="titulo">SuperFacil-Atacado</h2>
     <img src="Super-Facil-Atacado.webp" alt="Fachada do supermercado Super-Facil-Atacado na Av. Alberto Maranhão" class="imagem-local">
     
