--- a/museus/museu3.html
+++ b/museus/museu3.html
@@ -9,6 +9,12 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\museus.html" class="botao-voltar">voltar</a>
+      </div>
+
         <h2 class="titulo">Museu do Sertão</h2>
         <img src="sertao.webp" alt="fachada do Museu do Sertão" class="imagem-local">
         
