--- a/museus/museu5.html
+++ b/museus/museu5.html
@@ -9,6 +9,11 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\museus.html" class="botao-voltar">voltar</a>
+      </div>
         <h2 class="titulo">Museu da Estação das Artes Elizeu Ventania</h2>
         <img src="estacaomossoro.webp" alt="fachada da Estação das Artes Elizeu Ventania" class="imagem-local">
         
