--- a/pracas/praca1.html
+++ b/pracas/praca1.html
@@ -9,6 +9,12 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\pracas.html" class="botao-voltar">voltar</a>
+      </div>
+
         <h2 class="titulo"> Praça do Rotary </h2>
         <img src="praca-rotary.png" alt="fachada da Praça da Convivência" class="imagem-local">
         
