--- a/pracas/praca5.html
+++ b/pracas/praca5.html
@@ -9,6 +9,12 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\pracas.html" class="botao-voltar">voltar</a>
+      </div>
+
         <h2 class="titulo"> Praça dos Esportes </h2>
 
         <img src="praçasdosesportes.webp" alt="Praça dos Esportes" class="imagem-local">
