--- a/restaurantes/pgmolde2.html
+++ b/restaurantes/pgmolde2.html
@@ -9,6 +9,12 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\Restaurantes.html" class="botao-voltar">voltar</a>
+      </div>
+
         <h2 class="titulo">Germanos</h2>
         <img src="./germanos.png" alt="Deusa Gourmet" class="imagem-local">
         
