--- a/restaurantes/pgmolde3.html
+++ b/restaurantes/pgmolde3.html
@@ -11,6 +11,12 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\Restaurantes.html" class="botao-voltar">voltar</a>
+      </div>
+
         <h2 class="titulo">Forno a Lenha</h2>
         <img src="./fornoalenha.png" alt="Foto de vista ampla do estabelecimento" class="imagem-local">
         
