--- a/restaurantes/pgmolde4.html
+++ b/restaurantes/pgmolde4.html
@@ -10,6 +10,13 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\Restaurantes.html" class="botao-voltar">voltar</a>
+      </div>
+
+
         <h2 class="titulo">Restaurante Onsen</h2>
         <img src="./osen.jpg" alt="Restaurante Onsen" class="imagem-local">
         
