--- a/restaurantes/pgmolde5.html
+++ b/restaurantes/pgmolde5.html
@@ -10,6 +10,11 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\Restaurantes.html" class="botao-voltar">voltar</a>
+      </div>
         <h2 class="titulo">Tchê Gourmet</h2>
         <img src="./tchegourmet.jpg" alt="Deusa Gourmet" class="imagem-local">
         
