--- a/restaurantes/pgmolde6.html
+++ b/restaurantes/pgmolde6.html
@@ -17,6 +17,12 @@
     </head>
     <body>
       <div class="container">
+
+        <div class="botao-detalhes">
+       
+        <a href="..\Restaurantes.html" class="botao-voltar">voltar</a>
+      </div>
+
         <h2 class="titulo">Deusa Gourmet</h2>
         <img src="./deusagourmet.jpg" alt="Deusa Gourmet" class="imagem-local">
         
