--- a/supermercados/super2.html
+++ b/supermercados/super2.html
@@ -10,6 +10,12 @@
 </head>
 <body>
   <div class="container">
+
+      <div class="botao-detalhes">
+       
+        <a href="..\supermercados.html" class="botao-voltar">voltar</a>
+      </div>
+
     <h2 class="titulo">Hiper Queiroz Nova Betania</h2>
     <img src="hiper-queiroz-nova-betania.png" alt="Fachada do supermercado Hiper Quiroz Nova Betania Rua Carina de Almeida Costa, 158 - Nova Betânia" class="imagem-local">
     
